src/openim_sdk_ffi.h

extern void SetGroupMemberRoleLevel(char* operationID, char* groupID, char* userID, int roleLevel);
extern void SetGroupMemberInfo(char* operationID, char* groupMemberInfo);
extern void GetJoinedGroupList(char* operationID);
extern void GetGroupsInfo(char* operationID, char* groupIDList);
extern void SearchGroups(char* operationID, char* searchParam);
extern void SetGroupInfo(char* operationID, char* groupID, char* groupInfo);
extern void SetGroupVerification(char* operationID, char* groupID, int32_t verification);
extern void SetGroupLookMemberInfo(char* operationID, char* groupID, int32_t rule);
extern void SetGroupApplyMemberFriend(char* operationID, char* groupID, int32_t rule);
extern void GetGroupMemberList(char* operationID, char* groupID, int32_t filter, int32_t offset, int32_t count);
extern void GetGroupMemberOwnerAndAdmin(char* operationID, char* groupID);
extern void GetGroupMemberListByJoinTimeFilter(char* operationID, char* groupID, int32_t offset, int32_t count, int64_t joinTimeBegin, int64_t joinTimeEnd, char* filterUserIDList);
extern void GetGroupMembersInfo(char* operationID, char* groupID, char* userIDList);
extern void KickGroupMember(char* operationID, char* groupID, char* reason, char* userIDList);
extern void TransferGroupOwner(char* operationID, char* groupID, char* newOwnerUserID);
extern void InviteUserToGroup(char* operationID, char* groupID, char* reason, char* userIDList);
extern void GetRecvGroupApplicationList(char* operationID);
extern void GetSendGroupApplicationList(char* operationID);
extern void AcceptGroupApplication(char* operationID, char* groupID, char* fromUserID, char* handleMsg);
extern void RefuseGroupApplication(char* operationID, char* groupID, char* fromUserID, char* handleMsg);