lib/openim_sdk_ffi_bindings_generated.dart


  late final _SetGroupMemberRoleLevelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Int)>>('SetGroupMemberRoleLevel');
  late final _SetGroupMemberRoleLevel = _SetGroupMemberRoleLevelPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, int)>();

  void SetGroupMemberInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupMemberInfo,
  ) {
    return _SetGroupMemberInfo(
      operationID,
      groupMemberInfo,
    );
  }

  late final _SetGroupMemberInfoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('SetGroupMemberInfo');
  late final _SetGroupMemberInfo = _SetGroupMemberInfoPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetJoinedGroupList(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _GetJoinedGroupList(
      operationID,
    );
  }

  late final _GetJoinedGroupListPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'GetJoinedGroupList');
  late final _GetJoinedGroupList =
      _GetJoinedGroupListPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void GetGroupsInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupIDList,
  ) {
    return _GetGroupsInfo(
      operationID,
      groupIDList,
    );
  }

  late final _GetGroupsInfoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('GetGroupsInfo');
  late final _GetGroupsInfo = _GetGroupsInfoPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SearchGroups(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> searchParam,
  ) {
    return _SearchGroups(
      operationID,
      searchParam,
    );
  }

  late final _SearchGroupsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('SearchGroups');
  late final _SearchGroups = _SearchGroupsPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SetGroupInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> groupInfo,
  ) {
    return _SetGroupInfo(
      operationID,
      groupID,
      groupInfo,
    );
  }

  late final _SetGroupInfoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('SetGroupInfo');
  late final _SetGroupInfo = _SetGroupInfoPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  void SetGroupVerification(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    int verification,
  ) {
    return _SetGroupVerification(
      operationID,
      groupID,
      verification,
    );
  }

  late final _SetGroupVerificationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int32)>>('SetGroupVerification');
  late final _SetGroupVerification = _SetGroupVerificationPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  void SetGroupLookMemberInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    int rule,
  ) {
    return _SetGroupLookMemberInfo(
      operationID,
      groupID,
      rule,
    );
  }

  late final _SetGroupLookMemberInfoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int32)>>('SetGroupLookMemberInfo');
  late final _SetGroupLookMemberInfo = _SetGroupLookMemberInfoPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  void SetGroupApplyMemberFriend(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    int rule,
  ) {
    return _SetGroupApplyMemberFriend(
      operationID,
      groupID,
      rule,
    );
  }

  late final _SetGroupApplyMemberFriendPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int32)>>('SetGroupApplyMemberFriend');
  late final _SetGroupApplyMemberFriend =
      _SetGroupApplyMemberFriendPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  void GetGroupMemberList(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    int filter,
    int offset,
    int count,
  ) {
    return _GetGroupMemberList(
      operationID,
      groupID,
      filter,
      offset,
      count,
    );
  }

  late final _GetGroupMemberListPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int32, ffi.Int32, ffi.Int32)>>('GetGroupMemberList');
  late final _GetGroupMemberList = _GetGroupMemberListPtr.asFunction<
      void Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, int, int)>();

  void GetGroupMemberOwnerAndAdmin(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
  ) {
    return _GetGroupMemberOwnerAndAdmin(
      operationID,
      groupID,
    );
  }

  late final _GetGroupMemberOwnerAndAdminPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('GetGroupMemberOwnerAndAdmin');
  late final _GetGroupMemberOwnerAndAdmin =
      _GetGroupMemberOwnerAndAdminPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetGroupMemberListByJoinTimeFilter(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    int offset,
    int count,
    int joinTimeBegin,
    int joinTimeEnd,
    ffi.Pointer<ffi.Char> filterUserIDList,
  ) {
    return _GetGroupMemberListByJoinTimeFilter(
      operationID,
      groupID,
      offset,
      count,
      joinTimeBegin,
      joinTimeEnd,
      filterUserIDList,
    );
  }

  late final _GetGroupMemberListByJoinTimeFilterPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int32,
              ffi.Int32,
              ffi.Int64,
              ffi.Int64,
              ffi.Pointer<ffi.Char>)>>('GetGroupMemberListByJoinTimeFilter');
  late final _GetGroupMemberListByJoinTimeFilter =
      _GetGroupMemberListByJoinTimeFilterPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, int,
              int, int, ffi.Pointer<ffi.Char>)>();

  void GetGroupMembersInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> userIDList,
  ) {
    return _GetGroupMembersInfo(
      operationID,
      groupID,
      userIDList,
    );
  }

  late final _GetGroupMembersInfoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('GetGroupMembersInfo');
  late final _GetGroupMembersInfo = _GetGroupMembersInfoPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  void KickGroupMember(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> reason,
    ffi.Pointer<ffi.Char> userIDList,
  ) {
    return _KickGroupMember(
      operationID,
      groupID,
      reason,
      userIDList,
    );
  }

  late final _KickGroupMemberPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('KickGroupMember');
  late final _KickGroupMember = _KickGroupMemberPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void TransferGroupOwner(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> newOwnerUserID,
  ) {
    return _TransferGroupOwner(
      operationID,
      groupID,
      newOwnerUserID,
    );
  }

  late final _TransferGroupOwnerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('TransferGroupOwner');
  late final _TransferGroupOwner = _TransferGroupOwnerPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  void InviteUserToGroup(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> reason,
    ffi.Pointer<ffi.Char> userIDList,
  ) {
    return _InviteUserToGroup(
      operationID,
      groupID,
      reason,
      userIDList,
    );
  }

  late final _InviteUserToGroupPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('InviteUserToGroup');
  late final _InviteUserToGroup = _InviteUserToGroupPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetRecvGroupApplicationList(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _GetRecvGroupApplicationList(
      operationID,
    );
  }

  late final _GetRecvGroupApplicationListPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'GetRecvGroupApplicationList');
  late final _GetRecvGroupApplicationList = _GetRecvGroupApplicationListPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void GetSendGroupApplicationList(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _GetSendGroupApplicationList(
      operationID,
    );
  }

  late final _GetSendGroupApplicationListPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'GetSendGroupApplicationList');
  late final _GetSendGroupApplicationList = _GetSendGroupApplicationListPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void AcceptGroupApplication(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> fromUserID,
    ffi.Pointer<ffi.Char> handleMsg,
  ) {
    return _AcceptGroupApplication(
      operationID,
      groupID,
      fromUserID,
      handleMsg,
    );
  }

  late final _AcceptGroupApplicationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('AcceptGroupApplication');
  late final _AcceptGroupApplication = _AcceptGroupApplicationPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void RefuseGroupApplication(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> fromUserID,
    ffi.Pointer<ffi.Char> handleMsg,
  ) {
    return _RefuseGroupApplication(
      operationID,
      groupID,
      fromUserID,
      handleMsg,
    );
  }
